--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,16 @@ a:hover {
   color: #535bf2;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 h1 {
